added login for admin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,3 +77,13 @@ a{
     text-decoration: none;
      align-self: center;
 }
+
+.input.red,
+.select.red{
+    border-color: red;
+}
+
+.tred{
+    color: red;
+    text-align: center;
+}
