--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,11 +35,10 @@
           required
         />
         <select name="position" class="select" required>
-          <option>--Select position--</option>
-          <option>Admin</option>
-          <option>Pharmacist</option>
-          <option>Cashier</option>
-          <option>Manager</option>
+          <option value="select">--Select position--</option>
+          <option value="pharmacist">Pharmacist</option>
+          <option value="cashier">Cashier</option>
+          <option value="manager">Manager</option>
         </select>
         <input type="submit" name="submit" value="SignUp" class="submit" />
       </form>
