--- a/views/admin-cashier.ejs
+++ b/views/admin-cashier.ejs
@@ -29,13 +29,11 @@
     </header>
     <aside>
       <ul class="aside-list">
-        <li class="list-item"><a href="admin.html">Dashboard</a></li>
-        <li class="list-item">
-          <a href="admin-pharmacist.html">Pharmacist</a>
-        </li>
-        <li class="list-item"><a href="admin-manager.html">Manager</a></li>
-        <li class="list-item"><a href="admin-cashier.html">Cashier</a></li>
-        <li class="list-item"><a href="#">Logout</a></li>
+        <li class="list-item"><a href="/admin">Dashboard</a></li>
+        <li class="list-item"><a href="/admin/pharmacist">Pharmacist</a></li>
+        <li class="list-item"><a href="/admin/manager">Manager</a></li>
+        <li class="list-item"><a href="#">Cashier</a></li>
+        <li class="list-item"><a href="/logout">Logout</a></li>
       </ul>
     </aside>
     <main>
