--- a/views/pharmacist-stocks.ejs
+++ b/views/pharmacist-stocks.ejs
@@ -28,19 +28,19 @@
       </h1>
     </header>
     <aside>
-        <ul class="aside-list">
-          <li class="list-item"><a href="pharmacist.html">Dashboard</a></li>
-          <li class="list-item"><a href="./pharmasict-presc.html">Prescription</a></li>
-          <li class="list-item"><a href="./pharmacist-stocks.html">Stock</a></li>
-          <li class="list-item"><a href="#">Logout</a></li>
-        </ul>
-      </aside>
+      <ul class="aside-list">
+        <li class="list-item"><a href="/pharmacist">Dashboard</a></li>
+        <li class="list-item"><a href="/pharmacist/presc">Prescription</a></li>
+        <li class="list-item"><a href="#">Stock</a></li>
+        <li class="list-item"><a href="/logout">Logout</a></li>
+      </ul>
+    </aside>
     <main>
       <section class="main-content">
         <h2 class="title">Manage Stocks</h2>
         <div class="container">
           <ul class="tabs-list">
-            <li class="tab-item active" data-goto='table'>
+            <li class="tab-item active" data-goto="table">
               <h3 class="tab-title">View stock</h3>
             </li>
             <li class="tab-item" data-goto="form">
