--- a/views/pharmacist-stocks.ejs
+++ b/views/pharmacist-stocks.ejs
@@ -2,6 +2,17 @@
 <html>
   <head>
     <title>Stocks | Pharmacy System</title>
+    <script>
+      let json = localStorage.getItem("info");
+      let obj = JSON.parse(json);
+      if (json) {
+        if (obj.pos !== "pharmacist") {
+          location.href = "/" + obj.pos;
+        }
+      } else {
+        location.href = "/login";
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,6 +23,7 @@
     <link rel="stylesheet" href="./css/main-with-table.css" />
     <link rel="stylesheet" href="./css/add-form.css" />
     <script src="./js/change-content.js" defer></script>
+    <script src="./js/formValidate.js" defer></script>
   </head>
   <body>
     <header>
@@ -54,42 +66,32 @@
                 <th>Name</th>
                 <th>Category</th>
                 <th>Discription</th>
-                <th>Status</th>
-                <th>Date</th>
-                <th>Delete</th>
+                <th>Left</th>
+                <th>Unit Cost</th>
               </tr>
+              <% if(locals.tableData && locals.tableData.length>0) {
+                    tableData.forEach(data=>{%> 
               <tr>
-                <td>4</td>
-                <td>Piriton</td>
-                <td>Pills</td>
-                <td>Pain killer</td>
-                <td>Available</td>
-                <td>2021-09-03 12:34:56</td>
-                <td><img src="./assets/delete.svg" alt="delete" /></td>
+                <td><%= data.id %></td>
+                <td><%= data.name %></td>
+                <td><%= data.category %></td>
+                <td><%= data.desc %></td>
+                <td><%= data.quantity %></td>
+                <td><%= data.cost %></td>
               </tr>
-              <tr>
-                <td>5</td>
-                <td>Ocupol Dx</td>
-                <td>Eye drops</td>
-                <td>Sterile Eye/Ear Drops</td>
-                <td>Available</td>
-                <td>2021-09-01 12:34:21</td>
-                <td><img src="./assets/delete.svg" alt="delete" /></td>
-              </tr>
-              <tr>
-                <td>6</td>
-                <td>Paracetmol</td>
-                <td>Pills</td>
-                <td>Fever</td>
-                <td>Available</td>
-                <td>2021-08-28 12:21:32</td>
-                <td><img src="./assets/delete.svg" alt="delete" /></td>
-              </tr>
+              <% })}%>
             </table>
-            <form class="hidden tab-content" id="form">
+            <form class="hidden tab-content" id="form" action='/pharmacist/stocks' method="post">
+              <input
+                type="number"
+                name="stockId"
+                class="input"
+                placeholder="Stock ID"
+                required
+              />
               <input
                 type="text"
-                name="drug-name"
+                name="drug"
                 class="input"
                 placeholder="Drug Name"
                 required
@@ -103,7 +105,7 @@
               />
               <input
                 type="text"
-                name="description"
+                name="desc"
                 class="input"
                 placeholder="Description"
                 required
@@ -131,7 +133,7 @@
               />
               <input
                 type="number"
-                name="cost"
+                name="unitCost"
                 class="input"
                 placeholder="Unit cost"
                 required
